# DpdkPlayground

./: README.md
dpdk_server_client/: Makefile  README.txt  reader  reader.c  server  server.c  shmem.h
primary_dpdk_firecracker/: LOG_UPDATE_1.txt  LOG_UPDATE_2.txt  Makefile  New_Branch_Readme.txt  README.txt  Task.txt  finetuning.txt  issue_gso.txt  reader  reader.c  server  server.c  serverOld
rust_stuff/bindgen_demo/: Cargo.toml
rust_stuff/hello_cargo/: Cargo.toml
rust_stuff/hello_cargo/src/: main.rs
rust_stuff/hello_world/: main.rs
rust_stuff/librust-sys/: Cargo.toml  README  bindings.rs  build.rs
rust_stuff/noob_extern/: Cargo.toml
rust_stuff/proba_to_delete/: Cargo.toml
rust_stuff/reader_rust/: Cargo.toml  README  wrapper.h
rust_stuff/reader_rust/src/: main.rs
rust_stuff/reader_rust_bindgen/: Cargo.toml  README  static-functions.c
rust_stuff/reader_rust_bindgen/src/: bindings.rs  bindingsOld.rs  main.rs
rust_stuff/static_functions_bindgen/: Cargo.toml  build.rs
rust_stuff/static_functions_bindgen/include/: static-functions.h
rust_stuff/static_functions_bindgen/src/: bindingsInline.rs  bindingsMbuf.rs  main.rs
server_client/: Makefile  README  reader  reader.c  server  server.c
