[package]
name = "static_functions_bindgen"
version = "0.1.0"
authors = ["MihaiDogaru <dogarumihai2537@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
